--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@
     <br>
 
     <div class="footer">
-        <h1 class="footer-h">Made with ❤️ by collaboraters <a class="header-a" href="#">Anshul</a> <a class="header-a" href="#"></a></h1>
+        <h1 class="footer-h">Made with ❤️ by collaboraters <a class="header-a" href="https://anschy.github.io">Anshul</a> <a class="header-a" href="#"></a></h1>
     </div>
 
 </body>
