--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
     
 
     <div class="footer">
-        <h1 class="footer-h">❤️ <a class="header-a" href="#"></a> <a class="header-a" href="#"></a></h1>
+        <h1 class="footer-h">❤️<a class="header-a" href="#"></a></h1>
     </div>
 
 </body>
