--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
 	<br>
 	<center>
 	<audio controls>
-	<source src="https:/audioxt.heroku.app/static/{{audio}}.mp3" type="audio/mpeg">
+	<source src="https:/audioxt.heroku.app/static/{{audio}}.mp3" type="audio/mpeg">   <!--https:/audioxt.heroku.app/ --> 
 	</audio>
 	<center>
 	
@@ -119,7 +119,7 @@
     
 
     <div class="footer">
-        <h1 class="footer-h"> made with ❤️<a class="header-a" href="#"></a></h1>
+        <h1 class="footer-h">❤️ <a class="header-a" href="#"></a> <a class="header-a" href="#"></a></h1>
     </div>
 
 </body>
