--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         }
 
         .header-h {
-            text-align: left;
+            text-align: center;
             font-size: 40px;
             padding: 10px;
         }
