--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
     
 
     <div class="footer">
-        <h1 class="footer-h">❤️ <a class="header-a" href="#"></a> <a class="header-a" href="#"></a></h1>
+        <h1 class="footer-h">made with ❤️ <a class="header-a" href="#"></a> <a class="header-a" href="#"></a></h1>
     </div>
 
 </body>
